--- a/hdcevents/public/css/styles.css
+++ b/hdcevents/public/css/styles.css
@@ -122,6 +122,19 @@ header {
     color: #757575;
 }
 
+/* Event create page */
+#event-create-container {
+    padding: 30px;
+}
+
+#event-create-container label {
+    font-weight: bold;
+}
+
+#event-create-container input, select, textarea {
+    font-size: 12px;
+}
+
 /* Footer */
 footer {
     text-align: center;
