--- a/hdcevents/public/css/styles.css
+++ b/hdcevents/public/css/styles.css
@@ -180,6 +180,15 @@ header {
     margin: 20px 0;
 }
 
+#items-list {
+    list-style: none;
+    padding-left: 0;
+}
+
+#items-list li {
+    display: flex;
+}
+
 /* Footer */
 footer {
     text-align: center;
